<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StanicaScreen"
    android:background="@drawable/gradient1"
    >

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toTopOf="@+id/temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedTime"
        app:srcCompat="@drawable/sun" />

    <TextView
        android:id="@+id/naziv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:fontFamily="@font/firasans_bold"
        android:gravity="center_horizontal"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:text="@string/bjelovar"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/img_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/opis_vremena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fontFamily="@font/firasans_regular"
        android:text="@string/sun_ano"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp" />

    <TextView
        android:id="@+id/dan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:fontFamily="@font/firasans_regular"
        android:text="@string/subota"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/img_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/naziv"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/datum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fontFamily="@font/firasans_regular"
        android:text="@string/_16_11_2019"
        android:textColor="#FFFFFF"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dan" />

    <ImageView
        android:id="@+id/img_padaline"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:contentDescription="@string/padaline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opis_vremena"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_umbrella" />

    <ImageView
        android:id="@+id/img_vlaga"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:contentDescription="@string/vlaga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_padaline"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_padaline" />

    <ImageView
        android:id="@+id/img_vjetar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:contentDescription="@string/vjetar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_vlaga"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_vjetar" />

    <TextView
        android:id="@+id/padaline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/_54"
        android:textColor="#FFFFFF"
        android:textSize="9sp"
        app:fontFamily="@font/firasans_regular"
        app:layout_constraintBottom_toBottomOf="@+id/img_padaline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_padaline"
        app:layout_constraintTop_toTopOf="@+id/img_padaline" />

    <TextView
        android:id="@+id/vlaga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/_95"
        android:textColor="#FFFFFF"
        android:textSize="9sp"
        app:fontFamily="@font/firasans_regular"
        app:layout_constraintBottom_toBottomOf="@+id/img_vlaga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_vlaga"
        app:layout_constraintTop_toTopOf="@+id/img_vlaga" />

    <TextView
        android:id="@+id/vjetar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/_2_km_h"
        android:textColor="#FFFFFF"
        android:textSize="9sp"
        app:fontFamily="@font/firasans_regular"
        app:layout_constraintBottom_toBottomOf="@+id/img_vjetar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_vjetar"
        app:layout_constraintTop_toTopOf="@+id/img_vjetar" />

    <ImageView
        android:id="@+id/img_return"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:contentDescription="@string/backbutton"
        android:onClick="imageClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_back_button"
        android:focusable="true" />

    <ImageView
        android:id="@+id/img_previous_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/backwardsdate"
        app:layout_constraintBottom_toBottomOf="@+id/datum"
        app:layout_constraintEnd_toStartOf="@+id/dan"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dan"
        app:srcCompat="@drawable/ic_chevron_left" />

    <ImageView
        android:id="@+id/img_next_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/forwarddate"
        app:layout_constraintBottom_toBottomOf="@+id/datum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dan"
        app:layout_constraintTop_toTopOf="@+id/dan"
        app:srcCompat="@drawable/ic_chevron_right" />

    <Button
        android:id="@+id/btn_lokacija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        app:fontFamily="@font/firasans_regular"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:text="@string/lokacija_na_karti"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_vjetar" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:fontFamily="@font/firasans_regular"
        android:text="@string/informacije_se_a_uriraju_svakih_5_minuta"
        android:textColor="#80FFFFFF"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_lokacija" />

    <TextView
        android:id="@+id/selectedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/_16_00"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/img_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datum" />

    <TextView
        android:id="@+id/nextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_17_00"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/img_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/selectedTime"
        app:layout_constraintTop_toBottomOf="@+id/datum" />

    <TextView
        android:id="@+id/previousTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_15_00"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/img_icon"
        app:layout_constraintEnd_toStartOf="@+id/selectedTime"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datum" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="111dp"
        android:layout_height="66dp"
        app:fontFamily="@font/firasans_bold"
        android:gravity="center"
        android:text="@string/_12_c"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>