<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoadScreen">

    <ImageView
        android:id="@+id/img_gradText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tekst_grad_bjelovar_vremenske_stanice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_group_10" />

    <ImageView
        android:id="@+id/img_vubText"
        android:layout_width="177dp"
        android:layout_height="47dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/tekst_veleu_ili_te_u_bjelovaru"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_group_27" />

    <ImageView
        android:id="@+id/img_gradLogo"
        android:layout_width="48.22dp"
        android:layout_height="61dp"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="false"
        android:contentDescription="@string/grb_grada_bjelovara"
        android:scaleType="fitXY"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_gradText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_gradText"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/grb_grada_bjelovara_clean4x" />

    <ImageView
        android:id="@+id/img_vubLogo"
        android:layout_width="46dp"
        android:layout_height="45dp"
        android:contentDescription="@string/logo_veleu_ili_ta_u_bjelovaru"
        app:layout_constraintBottom_toBottomOf="@+id/img_vubText"
        app:layout_constraintEnd_toEndOf="@+id/img_vubText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/img_vubText"
        app:layout_constraintTop_toTopOf="@+id/img_vubText"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/vub_logo2_4x" />

</androidx.constraintlayout.widget.ConstraintLayout>