<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainScreen">

    <ImageView
        android:id="@+id/img_gradText"
        android:layout_width="109dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/tekst_grad_bjelovar_vremenske_stanice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_group_10" />

    <ImageView
        android:id="@+id/img_gradLogo"
        android:layout_width="26dp"
        android:layout_height="32.5dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/grb_grada_bjelovara"
        android:scaleType="fitXY"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintBottom_toBottomOf="@+id/img_gradText"
        app:layout_constraintEnd_toEndOf="@+id/img_gradText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/img_gradText"
        app:layout_constraintRight_toRightOf="@+id/img_gradText"
        app:layout_constraintStart_toStartOf="@+id/img_gradText"
        app:layout_constraintTop_toTopOf="@+id/img_gradText"
        app:srcCompat="@drawable/grb_grada_bjelovara_clean4x" />

    <ImageView
        android:id="@+id/img_hamburgerMenu"
        android:layout_width="18dp"
        android:layout_height="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/hamburgermenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_gradText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/hamburger_menu" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_gradText" />

    <ImageView
        android:id="@+id/img_cardView"
        android:layout_width="20dp"
        android:layout_height="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/cardview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/card_view" />

    <ImageView
        android:id="@+id/img_listView"
        android:layout_width="20dp"
        android:layout_height="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/listview"
        app:layout_constraintStart_toEndOf="@+id/img_cardView"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/list_view" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_vubText"
        android:layout_width="126dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/tekst_veleu_ili_te_u_bjelovaru"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_group_27" />

    <ImageView
        android:id="@+id/img_vubLogo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/logo_veleu_ili_ta_u_bjelovaru"
        app:layout_constraintBottom_toBottomOf="@+id/img_vubText"
        app:layout_constraintEnd_toEndOf="@+id/img_vubText"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@+id/img_vubText"
        app:layout_constraintTop_toTopOf="@+id/img_vubText"
        app:srcCompat="@drawable/vub_logo2_4x" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/informacije_se_a_uriraju_svakih_5_minuta"
        android:textColor="#80FFFFFF"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_vubText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/footer"
        app:layout_constraintTop_toTopOf="@+id/footer"
        app:layout_constraintVertical_bias="1.0" />

    <GridView
        android:id="@+id/gridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:columnWidth="280dp"
        android:gravity="center"
        android:horizontalSpacing="0dp"
        android:numColumns="1"
        android:stretchMode="columnWidth"
        android:verticalSpacing="24dp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_cardView">

    </GridView>


</androidx.constraintlayout.widget.ConstraintLayout>